add swagger docs for pos stores and courses
