# pos/stores.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"pos-proxy/db"
 	"pos-proxy/helpers"
+	"pos-proxy/pos/models"
 	"strconv"
 
 	"github.com/gorilla/mux"
@@ -11,8 +12,16 @@ import (
 	"gopkg.in/mgo.v2/bson"
 )
 
+// ListStores swagger:route GET /api/pos/store/ stores getStoreList
+//
+// List Stores
+//
+// returns a list of POS stores
+//
+// Responses:
+//   200: []store
 func ListStores(w http.ResponseWriter, r *http.Request) {
-	stores := []map[string]interface{}{}
+	stores := []models.Store{}
 	session := db.Session.Copy()
 	defer session.Close()
 	err := db.DB.C("stores").With(session).Find(bson.M{}).All(&stores)
@@ -23,14 +32,51 @@ func ListStores(w http.ResponseWriter, r *http.Request) {
 	helpers.ReturnSuccessMessage(w, stores)
 }
 
+// GetStore swagger:route GET /api/pos/store/{id}/ stores getStore
+//
+// Get Store
+//
+// returns a POS store data based on ID
+//
+// Parameters:
+// + name: id
+//   in: path
+//   required: true
+//   schema:
+//     type: integer
+// Responses:
+//   200: store
 func GetStore(w http.ResponseWriter, r *http.Request) {
+	store := models.Store{}
+	query := bson.M{}
+	idStr := mux.Vars(r)["id"]
+	query["id"], _ = strconv.Atoi(idStr)
+	session := db.Session.Copy()
+	defer session.Close()
+	err := db.DB.C("stores").With(session).Find(query).One(&store)
+	if err != nil {
+		helpers.ReturnErrorMessage(w, err.Error())
+		return
+	}
+	helpers.ReturnSuccessMessage(w, store)
 
 }
 
-func UpdateStore(w http.ResponseWriter, r *http.Request) {
-
-}
-
+// GetStoreDetails swagger:route GET /api/pos/storedetails/{id}/ stores getStoreDetails
+//
+// Get Store Details
+//
+// returns a POS stores details based on ID
+//
+// Parameters:
+// + name: id
+//   in: path
+//   required: true
+//   schema:
+//     type: integer
+//
+// Responses:
+//   200: storeDetails
 func GetStoreDetails(w http.ResponseWriter, r *http.Request) {
 	q := bson.M{}
 	vars := mux.Vars(r)
@@ -42,7 +88,7 @@ func GetStoreDetails(w http.ResponseWriter, r *http.Request) {
 	}
 	q["id"] = val
 
-	var storedetails map[string]interface{}
+	var storedetails models.StoreDetails
 	session := db.Session.Copy()
 	defer session.Close()
 	err = db.DB.C("storedetails").With(session).Find(q).One(&storedetails)
